--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 authors = ["Alex M. M. <acdenissk69@gmail.com>"]
 description = "A Rust library for the Discord API."
 documentation = "https://docs.rs/serenity"
-homepage = "https://github.com/serenity-rs/serenity"
+homepage = "https://github.com/L3afMe/serenity-selfbot-support"
 keywords = ["discord", "api"]
 license = "ISC"
 name = "serenity"
 readme = "README.md"
-repository = "https://github.com/serenity-rs/serenity.git"
+repository = "https://github.com/L3afMe/serenity-selfbot-support"
 version = "0.9.4"
 edition = "2018"
 include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "build.rs"]
